bzr-svn 0.6.3                    UNRELEASED

 BUG FIXES
 
  * Fix CustomLayout.get_branches. (Closes: #388698)

  * Fix fetching of revisions with no commit message set to the 2a repository format.

bzr-svn 0.6.2                    2009-06-18

  FEATURES

   * Integrated "bzr svn-serve" into "bzr serve --svn".

   * ``append_revisions_only`` now defaults to True, to prevent new users
     from accidently changing their Subversion mainline and upsetting their 
     fellow committers. (#383777)

   * ``bzr svn-set-revprops`` has been folded into ``bzr reconcile``.

  PERFORMANCE

   * Avoid expensive fetching of tags just to figure out they are supported.

   * Only check paths that actually have file properties set for 
     Bazaar revision id properties.

   * Reduced number of revisions analysed for repository layout from 2000 to 
     300.

  BUG FIXES

   * Only look for file properties if there are actually new file properties.
     (#383414)

   * Repository.iter_inventories() is now implemented.

   * Tags.get_reverse_dict().has_key() is now implemented.

   * Tags.get_reverse_dict().iteritems() is now implemented.

   * Register Subversion smart server as first server control format, 
     before the Bazaar smart client attempts to send POST to .bzr/smart over 
     HTTP.

   * Support "bzr push --create-prefix". (#383778)

   * In authentication fallback, ignore schemes that can not be 
     mapped to ports rather than erroring out. (#384813)

   * Cope with forbidden parts of the repository a bit better. (#261194)

   * Handle annotate after copies in Subversion. (#381523)

   * Support unicode characters in tag names. (#385813)

   * Support pulling older revisions that are direct ancestors of the current
     tip. (#386198)

   * "bzr svn-import --incremental" now handles resurrected branches correctly.
     (#383980)

   * Initial support for WorkingTree.apply_inventory_delta(). (#332107)
